--- a/genai-gateway/.vscode/extensions.json
+++ b/genai-gateway/.vscode/extensions.json
@@ -1,6 +1,5 @@
 {
   "recommendations": [
-    "TeamsDevApp.ms-teams-vscode-extension",
-    "ms-python.python"
+    "TeamsDevApp.ms-teams-vscode-extension"
   ]
 }
