--- a/genai-gateway/.vscode/launch.json
+++ b/genai-gateway/.vscode/launch.json
@@ -1,130 +1,222 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Launch Remote (Edge)",
-      "type": "msedge",
-      "request": "launch",
-      "url": "https://teams.microsoft.com/l/app/${{TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
-      "presentation": {
-        "group": "1-Teams",
-        "order": 4
-      },
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "name": "Launch Remote (Chrome)",
-      "type": "chrome",
-      "request": "launch",
-      "url": "https://teams.microsoft.com/l/app/${{TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
-      "presentation": {
-        "group": "1-Teams",
-        "order": 5
-      },
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "name": "Launch Remote (Desktop)",
-      "type": "node",
-      "request": "launch",
-      "preLaunchTask": "Start Teams App in Desktop Client (Remote)",
-      "presentation": {
-        "group": "1-Teams",
-        "order": 6
-      },
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "name": "Launch App (Edge)",
-      "type": "msedge",
-      "request": "launch",
-      "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
-      "presentation": {
-        "group": "all",
-        "hidden": true
-      },
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "name": "Launch App (Chrome)",
-      "type": "chrome",
-      "request": "launch",
-      "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
-      "presentation": {
-        "group": "all",
-        "hidden": true
-      },
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "name": "Start Python",
-      "type": "debugpy",
-      "request": "launch",
-      "program": "${workspaceFolder}/src/app.py",
-      "cwd": "${workspaceFolder}/src",
-      "console": "integratedTerminal"
-    },
-    {
-        "name": "Start Test Tool",
-        "type": "node",
-        "request": "launch",
-        "program": "${workspaceFolder}/devTools/teamsapptester/node_modules/@microsoft/teams-app-test-tool/cli.js",
-        "args": [
-            "start"
-        ],
-        "cwd": "${workspaceFolder}",
-        "console": "integratedTerminal",
-        "internalConsoleOptions": "neverOpen"
-    }
-  ],
-  "compounds": [
-    {
-      "name": "Debug in Teams (Edge)",
-      "configurations": ["Launch App (Edge)", "Start Python"],
-      "cascadeTerminateToConfigurations": ["Start Python"],
-      "preLaunchTask": "Start Teams App Locally",
-      "presentation": {
-        "group": "1-Teams",
-        "order": 1
-      },
-      "stopAll": true
-    },
-    {
-      "name": "Debug in Teams (Chrome)",
-      "configurations": ["Launch App (Chrome)", "Start Python"],
-      "cascadeTerminateToConfigurations": ["Start Python"],
-      "preLaunchTask": "Start Teams App Locally",
-      "presentation": {
-        "group": "1-Teams",
-        "order": 2
-      },
-      "stopAll": true
-    },
-    {
-      "name": "Debug in Teams (Desktop)",
-      "configurations": ["Start Python"],
-      "preLaunchTask": "Start Teams App in Desktop Client",
-      "presentation": {
-        "group": "1-Teams",
-        "order": 3
-      },
-      "stopAll": true
-    },
-    {
-        "name": "Debug in Test Tool",
-        "configurations": [
-            "Start Python",
-            "Start Test Tool"
-        ],
-        "cascadeTerminateToConfigurations": [
-            "Start Test Tool"
-        ],
-        "preLaunchTask": "Deploy (Test Tool)",
-        "presentation": {
-            "group": "2-local",
-            "order": 1
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Launch Remote in Teams (Edge)",
+            "type": "msedge",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${{TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "presentation": {
+                "group": "2-Teams",
+                "order": 4
+            },
+            "internalConsoleOptions": "neverOpen"
         },
-        "stopAll": true
-    }
-  ]
+        {
+            "name": "Launch Remote in Teams (Chrome)",
+            "type": "chrome",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${{TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "presentation": {
+                "group": "2-Teams",
+                "order": 5
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch App (Edge)",
+            "type": "msedge",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Local Service"
+            ],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            },
+            "internalConsoleOptions": "neverOpen",
+            "perScriptSourcemaps": "yes"
+        },
+        {
+            "name": "Launch App (Chrome)",
+            "type": "chrome",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${{local:TEAMS_APP_ID}}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Local Service"
+            ],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            },
+            "internalConsoleOptions": "neverOpen",
+            "perScriptSourcemaps": "yes"
+        },
+        {
+            "name": "Attach to Local Service",
+            "type": "node",
+            "request": "attach",
+            "port": 9239,
+            "restart": true,
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch Remote in Teams (Desktop)",
+            "type": "node",
+            "request": "launch",
+            "preLaunchTask": "Start Teams App in Desktop Client (Remote)",
+            "presentation": {
+                "group": "2-Teams",
+                "order": 6
+            },
+            "internalConsoleOptions": "neverOpen",
+        },
+        {
+            "name": "Launch Remote in Copilot (Edge)",
+            "type": "msedge",
+            "request": "launch",
+            "url": "https://m365.cloud.microsoft/chat/entity1-d870f6cd-4aa5-4d42-9626-ab690c041429/${agent-hint}?auth=2&${account-hint}&developerMode=Basic",
+            "cascadeTerminateToConfigurations": ["Attach to Local Service"],
+            "presentation": {
+                "group": "3-M365",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen",
+            "runtimeArgs": [
+                "--remote-debugging-port=9222",
+                "--no-first-run"
+            ]
+            },
+            {
+            "name": "Launch Remote in Copilot (Chrome)",
+            "type": "chrome",
+            "request": "launch",
+            "url": "https://m365.cloud.microsoft/chat/entity1-d870f6cd-4aa5-4d42-9626-ab690c041429/${agent-hint}?auth=2&${account-hint}&developerMode=Basic",
+            "cascadeTerminateToConfigurations": ["Attach to Local Service"],
+            "presentation": {
+                "group": "3-M365",
+                "order": 4
+            },
+            "internalConsoleOptions": "neverOpen",
+            "runtimeArgs": [
+                "--remote-debugging-port=9223",
+                "--no-first-run"
+            ]
+        },
+        {
+            "name": "Launch in Copilot (Edge)",
+            "type": "msedge",
+            "request": "launch",
+            "url": "https://m365.cloud.microsoft/chat/entity1-d870f6cd-4aa5-4d42-9626-ab690c041429/${local:agent-hint}?auth=2&${account-hint}&developerMode=Basic",
+            "cascadeTerminateToConfigurations": ["Attach to Local Service"],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            },
+            "internalConsoleOptions": "neverOpen",
+            "runtimeArgs": [
+                "--remote-debugging-port=9222",
+                "--no-first-run"
+            ]
+        },
+        {
+            "name": "Launch in Copilot (Chrome)",
+            "type": "chrome",
+            "request": "launch",
+            "url": "https://m365.cloud.microsoft/chat/entity1-d870f6cd-4aa5-4d42-9626-ab690c041429/${local:agent-hint}?auth=2&${account-hint}&developerMode=Basic",
+            "cascadeTerminateToConfigurations": ["Attach to Local Service"],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            },
+            "internalConsoleOptions": "neverOpen",
+            "runtimeArgs": [
+                "--remote-debugging-port=9223",
+                "--no-first-run"
+            ]
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Debug in Teams (Edge)",
+            "configurations": [
+                "Launch App (Edge)",
+                "Attach to Local Service"
+            ],
+            "preLaunchTask": "Start Teams App Locally",
+            "presentation": {
+                "group": "2-Teams",
+                "order": 1
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Teams (Chrome)",
+            "configurations": [
+                "Launch App (Chrome)",
+                "Attach to Local Service"
+            ],
+            "preLaunchTask": "Start Teams App Locally",
+            "presentation": {
+                "group": "2-Teams",
+                "order": 2
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Teams (Desktop)",
+            "configurations": [
+                "Attach to Local Service"
+            ],
+            "preLaunchTask": "Start Teams App in Desktop Client",
+            "presentation": {
+                "group": "2-Teams",
+                "order": 3
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Test Tool",
+            "configurations": [
+                "Attach to Local Service"
+            ],
+            "preLaunchTask": "Start Teams App (Test Tool)",
+            "presentation": {
+                "group": "1-local",
+                "order": 1
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Copilot (Edge)",
+            "configurations": [
+                "Launch in Copilot (Edge)",
+                "Attach to Local Service"
+            ],
+            "preLaunchTask": "Start Teams App Locally",
+            "presentation": {
+                "group": "3-M365",
+                "order": 1
+            },
+            "stopAll": true
+            },
+            {
+            "name": "Debug in Copilot (Chrome)",
+            "configurations": [
+                "Launch in Copilot (Chrome)",
+                "Attach to Local Service"
+            ],
+            "preLaunchTask": "Start Teams App Locally",
+            "presentation": {
+                "group": "3-M365",
+                "order": 2
+            },
+            "stopAll": true
+        }
+    ]
 }
