--- a/genai-gateway/teamsapp.local.yml
+++ b/genai-gateway/teamsapp.local.yml
@@ -41,33 +41,13 @@ provision:
 
   - uses: arm/deploy # Deploy given ARM templates parallelly.
     with:
-      # AZURE_SUBSCRIPTION_ID is a built-in environment variable,
-      # if its value is empty, TeamsFx will prompt you to select a subscription.
-      # Referencing other environment variables with empty values
-      # will skip the subscription selection prompt.
       subscriptionId: ${{AZURE_SUBSCRIPTION_ID}}
-      # AZURE_RESOURCE_GROUP_NAME is a built-in environment variable,
-      # if its value is empty, TeamsFx will prompt you to select or create one
-      # resource group.
-      # Referencing other environment variables with empty values
-      # will skip the resource group selection prompt.
       resourceGroupName: ${{AZURE_RESOURCE_GROUP_NAME}}
       templates:
-        # - path: ./infra/apimDeployment/azure.local.bicep # Relative path to this file
-        #   # Relative path to this yaml file.
-        #   # Placeholders will be replaced with corresponding environment
-        #   # variable before ARM deployment.
-        #   parameters: ./infra/apimDeployment/azure.local.parameters.json
-        #   # Required when deploying ARM template
-        #   deploymentName: Create-resources-for-bot
-
-        # Deploy all APIM modules with a single main deployment
-        - path: ./infra/apim/main.bicep
-          parameters: ./infra/apim/main.parameters.json
-          deploymentName: Deploy-APIM-Resources
-
-      # Teams Toolkit will download this bicep CLI version from github for you,
-      # will use bicep CLI in PATH if you remove this config.
+        # Deploy all APIM modules with a single main deployment using a new cognitive service
+        - path: ./infra/apimNewCog/main.bicep
+          parameters: ./infra/apimNewCog/main.parameters.json
+          deploymentName: Deploy-APIM-Resources-With-New-Cognitive-Service
       bicepCliVersion: v0.9.1
 
   # Validate using manifest schema
@@ -101,10 +81,10 @@ deploy:
   # Generate runtime environment variables
   - uses: file/createOrUpdateEnvironmentFile
     with:
-      target: ./.env
+      target: ./.localConfigs
       envs:
-        BOT_ID: ${{BOT_ID}}
-        BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
+        clientId: ${{BOT_ID}}
+        clientSecret: ${{SECRET_BOT_PASSWORD}}
         AZURE_OPENAI_API_KEY: ${{SECRET_AZURE_OPENAI_API_KEY}}
-        AZURE_OPENAI_MODEL_DEPLOYMENT_NAME: ${{AZURE_OPENAI_MODEL_DEPLOYMENT_NAME}}
+        AZURE_OPENAI_DEPLOYMENT_NAME: ${{AZURE_OPENAI_DEPLOYMENT_NAME}}
         AZURE_OPENAI_ENDPOINT: ${{AZURE_OPENAI_ENDPOINT}}
