refactor: move TeamsBotSsoPrompt to samples

--- a/bot-sso/m365agents.local.yml
+++ b/bot-sso/m365agents.local.yml
@@ -93,8 +93,8 @@ deploy:
     with:
       target: ./.localConfigs
       envs:
-        BOT_ID: ${{BOT_ID}}
-        BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
+        clientId: ${{BOT_ID}}
+        clientSecret: ${{SECRET_BOT_PASSWORD}}
         BOT_TYPE: 'MultiTenant'
         BOT_DOMAIN: ${{BOT_DOMAIN}}
         AAD_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
