--- a/hello-world-in-meeting/m365agents.yml
+++ b/hello-world-in-meeting/m365agents.yml
@@ -1,5 +1,5 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.5/yaml.schema.json
-version: v1.5
+# yaml-language-server: $schema=https://aka.ms/m365-agents-toolkits/v1.9/yaml.schema.json
+version: v1.9
 
 additionalMetadata:
   sampleTag: TeamsFx-Samples:hello-world-in-meeting
