feat: add content safety & structure update

--- a/genai-gateway/.vscode/launch.json
+++ b/genai-gateway/.vscode/launch.json
@@ -69,7 +69,7 @@
             "name": "Launch Remote in Teams (Desktop)",
             "type": "node",
             "request": "launch",
-            "preLaunchTask": "Start Teams App in Desktop Client (Remote)",
+            "preLaunchTask": "Start App in Desktop Client (Remote)",
             "presentation": {
                 "group": "2-Teams",
                 "order": 6
@@ -77,7 +77,7 @@
             "internalConsoleOptions": "neverOpen",
         },
         {
-            "name": "Launch Remote in Copilot (Edge)",
+            "name": "(Preview) Launch Remote in Copilot (Edge)",
             "type": "msedge",
             "request": "launch",
             "url": "https://m365.cloud.microsoft/chat/entity1-d870f6cd-4aa5-4d42-9626-ab690c041429/${agent-hint}?auth=2&${account-hint}&developerMode=Basic",
@@ -93,7 +93,7 @@
             ]
             },
             {
-            "name": "Launch Remote in Copilot (Chrome)",
+            "name": "(Preview) Launch Remote in Copilot (Chrome)",
             "type": "chrome",
             "request": "launch",
             "url": "https://m365.cloud.microsoft/chat/entity1-d870f6cd-4aa5-4d42-9626-ab690c041429/${agent-hint}?auth=2&${account-hint}&developerMode=Basic",
@@ -139,6 +139,7 @@
                 "--remote-debugging-port=9223",
                 "--no-first-run"
             ]
+
         }
     ],
     "compounds": [
@@ -148,7 +149,7 @@
                 "Launch App (Edge)",
                 "Attach to Local Service"
             ],
-            "preLaunchTask": "Start Teams App Locally",
+            "preLaunchTask": "Start App Locally",
             "presentation": {
                 "group": "2-Teams",
                 "order": 1
@@ -161,7 +162,7 @@
                 "Launch App (Chrome)",
                 "Attach to Local Service"
             ],
-            "preLaunchTask": "Start Teams App Locally",
+            "preLaunchTask": "Start App Locally",
             "presentation": {
                 "group": "2-Teams",
                 "order": 2
@@ -173,7 +174,7 @@
             "configurations": [
                 "Attach to Local Service"
             ],
-            "preLaunchTask": "Start Teams App in Desktop Client",
+            "preLaunchTask": "Start App in Desktop Client",
             "presentation": {
                 "group": "2-Teams",
                 "order": 3
@@ -181,11 +182,11 @@
             "stopAll": true
         },
         {
-            "name": "Debug in Test Tool",
+            "name": "Debug in Microsoft 365 Agents Playground",
             "configurations": [
                 "Attach to Local Service"
             ],
-            "preLaunchTask": "Start Teams App (Test Tool)",
+            "preLaunchTask": "Start App in Microsoft 365 Agents Playground",
             "presentation": {
                 "group": "1-local",
                 "order": 1
@@ -193,12 +194,12 @@
             "stopAll": true
         },
         {
-            "name": "Debug in Copilot (Edge)",
+            "name": "(Preview) Debug in Copilot (Edge)",
             "configurations": [
                 "Launch in Copilot (Edge)",
                 "Attach to Local Service"
             ],
-            "preLaunchTask": "Start Teams App Locally",
+            "preLaunchTask": "Start App Locally",
             "presentation": {
                 "group": "3-M365",
                 "order": 1
@@ -206,12 +207,12 @@
             "stopAll": true
             },
             {
-            "name": "Debug in Copilot (Chrome)",
+            "name": "(Preview) Debug in Copilot (Chrome)",
             "configurations": [
                 "Launch in Copilot (Chrome)",
                 "Attach to Local Service"
             ],
-            "preLaunchTask": "Start Teams App Locally",
+            "preLaunchTask": "Start App Locally",
             "presentation": {
                 "group": "3-M365",
                 "order": 2
