--- a/genai-gateway/m365agents.local.yml
+++ b/genai-gateway/m365agents.local.yml
@@ -48,6 +48,12 @@ provision:
         - path: ./infra/apimNewCog/main.bicep
           parameters: ./infra/apimNewCog/main.parameters.json
           deploymentName: Deploy-APIM-Resources-With-New-Cognitive-Service
+        
+        # Deploy all APIM modules with a single main deployment using an existing cognitive service
+        # - path: ./infra/apim-using-exist-cognitive-service/main.bicep
+        #   parameters: ./infra/apim-using-exist-cognitive-service/main.parameters.json
+        #   deploymentName: Deploy-APIM-Resources
+
       bicepCliVersion: v0.9.1
 
   # Validate using manifest schema
@@ -78,6 +84,12 @@ provision:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
 
 deploy:
+  # Run npm command
+  - uses: cli/runNpmCommand
+    name: install dependencies
+    with:
+      args: install --no-audit
+
   # Generate runtime environment variables
   - uses: file/createOrUpdateEnvironmentFile
     with:
