--- a/genai-gateway/m365agents.playground.yml
+++ b/genai-gateway/m365agents.playground.yml
@@ -36,14 +36,19 @@ deploy:
         version: ~0.2.1
         symlinkDir: ./devTools/teamsapptester
 
+  # Run npm command
+  - uses: cli/runNpmCommand
+    with:
+      args: install --no-audit
+
   # Generate runtime environment variables
   - uses: file/createOrUpdateEnvironmentFile
     with:
-      target: ./.localConfigs.testtool
+      target: ./.localConfigs.playground
       envs:
         TEAMSFX_NOTIFICATION_STORE_FILENAME: ${{TEAMSFX_NOTIFICATION_STORE_FILENAME}}
-        clientId: ""
-        clientSecret: ""
+        BOT_ID: ""
+        BOT_PASSWORD: ""
         AZURE_OPENAI_API_KEY: ${{SECRET_AZURE_OPENAI_API_KEY}}
         AZURE_OPENAI_DEPLOYMENT_NAME: ${{AZURE_OPENAI_DEPLOYMENT_NAME}}
         AZURE_OPENAI_ENDPOINT: ${{AZURE_OPENAI_ENDPOINT}}
