--- a/genai-gateway/m365agents.yml
+++ b/genai-gateway/m365agents.yml
@@ -84,6 +84,17 @@ provision:
 
 # Triggered when 'teamsfx deploy' is executed
 deploy:
+  # Run npm command
+  - uses: cli/runNpmCommand
+    name: install dependencies
+    with:
+      args: install
+
+  - uses: cli/runNpmCommand
+    name: build app
+    with:
+      args: run build --if-present
+
   # Deploy your application to Azure App Service using the zip deploy feature.
   # For additional details, refer to https://aka.ms/zip-deploy-to-app-services.
   - uses: azureAppService/zipDeploy
