--- a/genai-gateway/.gitignore
+++ b/genai-gateway/.gitignore
@@ -1,12 +1,11 @@
 # TeamsFx files
 env/.env.*.user
 env/.env.local
-env/.env.sandbox
-
 .localConfigs
-.localConfigs.testTool
+.localConfigs.playground
+.localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 appPackage/build
 
 # dependencies
