refactor: add new ai service modules

--- a/genai-gateway/.gitignore
+++ b/genai-gateway/.gitignore
@@ -1,10 +1,12 @@
 # TeamsFx files
 env/.env.*.user
 env/.env.local
+env/.env.sandbox
+
 .localConfigs
-.localConfigs.playground
+.localConfigs.testTool
 .notification.localstore.json
-.notification.playgroundstore.json
+.notification.testtoolstore.json
 appPackage/build
 
 # dependencies
